@@ -16,8 +16,8 @@ class AuthorsController < ApplicationController
     @author = User.find(params[:id])
     @items = @author.items.page(params[:page], :per_page => 20)
     
-    @rss_title = "Items from #{@author.name} (#{@author.email})"
-    @rss_description = "MNN - Items from #{@author.name} (#{@author.email})"
+    @rss_title = "World Mathaba - Items from #{@author.name} (#{@author.email})"
+    @rss_description = "World Mathaba - Items from #{@author.name} (#{@author.email})"
     @rss_category = "author_#{@author.name}"
     @rss_source = author_path(@author, :only_path => false, :protocol => 'https')
     @rss_language = "en"
