@@ -35,8 +35,8 @@ class TagsController < ApplicationController
     else
       @last_published = @items.first.published_at
     end
-    @rss_title = "Latest News tagged in #{@tag.title}"
-    @rss_description = "MNN - Latest News tagged in #{@tag.title}"
+    @rss_title = "World Mathaba - News tagged #{@tag.title}"
+    @rss_description = "World Mathaba - News tagged #{@tag.title}"
     @rss_category = @tag.title
     @rss_source = tags_path(@tag, :only_path => false, :protocol => 'https', :format => "html")
     headers['Last-Modified'] = @last_published.httpdate
